[package]
name = "rawsocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.153"
rustix = { version = "0.38.32", features = ["net", "fs"] }
tokio = { version = "1.37.0", optional = true }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }

[features]
tokio = ["dep:tokio"]
